--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,17 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3030"
+  },
+  "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^3.26.3",
+    "axios": "^0.19.2",
+    "next": "9.1.6",
+    "node-sass": "^4.13.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "author": "Ali Nazari",
   "license": "ISC"
