--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p 3030"
+    "start": "next start"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
