--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3030",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3030"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -16,6 +16,8 @@
     "node-sass": "^4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
   },
   "author": "Ali Nazari",
   "license": "ISC"
